[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/characters/team_b_campaigner.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/characters/team_b_gatherer.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui_elements/election_loser_container.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="ElectionLoserContainer" type="HBoxContainer"]
margin_top = 203.0
margin_right = 284.0
margin_bottom = 299.0
alignment = 1
script = ExtResource( 3 )

[node name="PlacementLabel" type="Label" parent="."]
margin_right = 84.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_fonts/font = SubResource( 1 )
text = "2nd"
align = 2
valign = 1

[node name="CampaignerTextureRect" type="TextureRect" parent="."]
margin_left = 88.0
margin_right = 184.0
margin_bottom = 96.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="GathererTextureRect" type="TextureRect" parent="."]
margin_left = 188.0
margin_right = 284.0
margin_bottom = 96.0
texture = ExtResource( 2 )
stretch_mode = 4
